--- a/app/src/main/resources/styles.css
+++ b/app/src/main/resources/styles.css
@@ -88,6 +88,18 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 255, 255, 0.7), 10, 0, 0, 8);
 }
 
+.skyjo-title {
+    -fx-font-size: 70px; /* Taille augmentée pour le titre Skyjo */
+    -fx-text-fill: white;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, 8);
+}
+
+.text.title {
+    -fx-font-size: 50px;
+    -fx-fill: #6dd5ed;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 255, 255, 0.7), 10, 0, 0, 8);
+}
+
 /* Animation pour le texte */
 .text {
     -fx-font-size: 16px;
