--- a/app/src/main/resources/styles.css
+++ b/app/src/main/resources/styles.css
@@ -101,6 +101,13 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 255, 255, 0.7), 10, 0, 0, 8);
 }
 
+.slider {
+    -fx-background-color: #383838;
+    -fx-border-color: #6dd5ed;
+    -fx-border-radius: 8px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 5, 0, 0, 3);
+}
+
 /* Animation pour le texte */
 .text {
     -fx-font-size: 16px;
