--- a/app/src/main/resources/styles.css
+++ b/app/src/main/resources/styles.css
@@ -101,11 +101,24 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 255, 255, 0.7), 10, 0, 0, 8);
 }
 
+/* Slider */
 .slider {
-    -fx-background-color: #383838;
-    -fx-border-color: #6dd5ed;
-    -fx-border-radius: 8px;
+    -fx-background-color: transparent;
+}
+
+.slider .track {
+    -fx-background-color: #555;
+    -fx-background-radius: 5px;
+}
+
+.slider .thumb {
+    -fx-background-color: #00adb5;
+    -fx-background-radius: 10px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 5, 0, 0, 3);
+}
+
+.slider .thumb:hover {
+    -fx-background-color: #00e0e0;
 }
 
 /* Animation pour le texte */
