--- a/app/src/main/resources/menu.css
+++ b/app/src/main/resources/menu.css
@@ -11,9 +11,6 @@
     -fx-text-fill: linear-gradient(to right, #6dd5ed, #2193b0); /* Dégradé de couleur pour le texte */
     -fx-font-weight: bold; /* Texte en gras */
     -fx-padding: 5px; /* Padding réduit */
-    -fx-border-color: #2193b0; /* Bordure de couleur */
-    -fx-border-width: 2px; /* Largeur de la bordure */
-    -fx-border-radius: 10px; /* Bordure arrondie */
 }
 
 /* Boutons stylisés */
@@ -67,17 +64,19 @@
     -fx-effect: none; /* Pas d'effet d'ombre */
 }
 
-.combo-box .list-cell {
+.combo-box.list-cell {
     -fx-background-color: #2c3e50; /* Fond sombre */
-    -fx-text-fill: #e0e0e0; /* Texte clair */
+    -fx-text-fill: white; /* Texte clair */
 }
 
-.combo-box .list-view {
+.combo-box.list-view {
     -fx-background-color: #2c3e50; /* Fond sombre */
     -fx-border-color: #2193b0; /* Bordure de couleur */
+    -fx-text-fill: white; /* Texte clair */
 }
 
-.combo-box .arrow {
+.combo-box.arrow {
+    -fx-text-fill: #2193b0; /* Couleur de la flèche */
     -fx-background-color: #2193b0; /* Couleur de la flèche */
 }
 
@@ -101,7 +100,7 @@
 }
 
 /* Suppression des effets de survol pour les champs de texte et ComboBox */
-.text-field:hover, .combo-box:hover {
+.text-field:hover,.combo-box:hover {
     -fx-border-color: #2193b0; /* Bordure de couleur */
     -fx-background-color: #2c3e50; /* Fond sombre */
     -fx-effect: none; /* Pas d'effet d'ombre */
